telecom-bretagne/javacompiler/SecondPhase/tests/Good/TestNativeNoBody.java
package tests;

public class A {

	public A() {
		// TODO Auto-generated constructor stub
	}

	native void m(int x);
	void m2(int x){}
	
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}
