telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestInheritedAbstMethod.java
package tests;

public abstract class A {

	public A() {
	}

	abstract void mmm(int x);
	void m2(int x){}
	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}

}

public strictfp final class C extends A {
	
	public A x;

	public C() {
		// TODO Auto-generated constructor stub
	}

	public static void main(String[] args) {
		// TODO Auto-generated method stub

	}
	
	public void m(int x){
		
	}

	void x(int y){}
}
